elseif, else フィールドのためのテストモジュール追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -377,6 +377,14 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 
 </div>
+
+<ul>
+<li>テストスイッチ 1: option_1_3</li>
+<li>テストスイッチ 2: option_2_2</li>
+</ul>
+<div>
+
+</div>
 <div class="twig_template">
 <h2></h2>
 
