--- a/tests/testdata/modules1/dev/if/template.html
+++ b/tests/testdata/modules1/dev/if/template.html
@@ -30,3 +30,38 @@
 {&"endif"&}
 
 </div>
+
+<ul>
+<li>テストスイッチ 1: {&{"input":{"type":"select", "name":"else_if_test_1", "label":"else/if テストスイッチ 1", "options":[
+	{"value":"option_1_1", "label":"option 1-1"},
+	{"value":"option_1_2", "label":"option 1-2"},
+	{"value":"option_1_3", "label":"option 1-3"},
+	{"value":"option_1_4", "label":"option 1-4"}
+],"hidden":false}}&}</li>
+<li>テストスイッチ 2: {&{"input":{"type":"select", "name":"else_if_test_2", "label":"else/if テストスイッチ 2", "options":[
+	{"value":"option_2_1", "label":"option 2-1"},
+	{"value":"option_2_2", "label":"option 2-2"},
+	{"value":"option_2_3", "label":"option 2-3"},
+	{"value":"option_2_4", "label":"option 2-4"}
+],"hidden":false}}&}</li>
+</ul>
+<div>
+{&{"if":{"cond":[["else_if_test_1==option_1_1"]]}}&}
+<p>option 1-1</p>
+{&{"elseif":{"cond":[["else_if_test_1==option_1_2"]]}}&}
+<p>option 1-2</p>
+{&{"elseif":{"cond":[["else_if_test_1==option_1_3"]]}}&}
+<p>option 1-3</p>
+	{&{"if":{"cond":[["else_if_test_2==option_2_1"]]}}&}
+		<p>option 2-1</p>
+	{&{"elseif":{"cond":[["else_if_test_2==option_2_2"]]}}&}
+		<p>option 2-2</p>
+	{&{"elseif":{"cond":[["else_if_test_2==option_2_3"]]}}&}
+		<p>option 2-3</p>
+	{&"else"&}
+		<p>option 2-4 (else)</p>
+	{&"endif"&}
+{&"else"&}
+<p>option 1-4 (else)</p>
+{&"endif"&}
+</div>
