elseif, else フィールドを追加

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -348,7 +348,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<p class="attention_box-heading">Heading</p>
 
 	<div data-broccoli-instance-path="/fields.main@20/fields.main@0" data-broccoli-mod-id="testMod1:boxes/attention_box" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div><!-- /.attention_box -->
-<div class="if" data-broccoli-instance-path="/fields.main@21" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/if">
+<div data-broccoli-instance-path="/fields.main@21" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/if"><div class="if">
 <p data-broccoli-instance-path="/fields.main@21/fields.main@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Markdown">うまく行ってますか？？？</p>
 <div data-broccoli-instance-path="/fields.main@21/fields.main@1" data-broccoli-mod-id="testMod1:dev/if" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div><div class="if__additional-elements"><p data-broccoli-instance-path="/fields.main@21/fields.additionals@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Markdown">表示されていますか？</p>
 <div data-broccoli-instance-path="/fields.main@21/fields.additionals@1" data-broccoli-mod-id="testMod1:dev/if" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
@@ -360,7 +360,18 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 
 </div>
-<div class="twig_template" data-broccoli-instance-path="/fields.main@22" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+
+<ul>
+<li>テストスイッチ 1: option_1_3</li>
+<li>テストスイッチ 2: option_2_2</li>
+</ul>
+<div>
+<p>option 1-3</p>
+			<p>option 2-2</p>
+	
+
+</div>
+</div><div class="twig_template" data-broccoli-instance-path="/fields.main@22" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
 <h2><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></h2>
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span>
 
