--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -360,6 +360,17 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 
 </div>
+
+<ul>
+<li>テストスイッチ 1: option_1_3</li>
+<li>テストスイッチ 2: option_2_2</li>
+</ul>
+<div>
+<p>option 1-3</p>
+			<p>option 2-2</p>
+	
+
+</div>
 <div class="twig_template">
 <h2></h2>
 
