--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -383,6 +383,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <li>テストスイッチ 2: option_2_2</li>
 </ul>
 <div>
+<p>option 1-3</p>
+			<p>option 2-2</p>
+	
 
 </div>
 <div class="twig_template">
