(max-length機能開発のためのサンプルモジュールを追加)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,6 +15,10 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="module-maxlength">
+    <div class="module-maxlength__module"></div>
+    <div class="module-maxlength__loop"><ul><li>element</li><li>element</li><li>element</li></ul></div>
+</div>
 <div class="resource-build">
 	<p>
 		resource build.<br />
