--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,7 @@
+<div class="module-maxlength">
+    <div class="module-maxlength__module"></div>
+    <div class="module-maxlength__loop"><ul><li>element</li><li>element</li><li>element</li></ul></div>
+</div>
 <div class="resource-build">
 	<p>
 		resource build.<br />
