addInstance() で max-length の制約を実装

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -16,7 +16,8 @@
         <h2>main</h2>
         <div class="contents" data-contents="main">
 <div class="module-maxlength">
-    <div class="module-maxlength__module"></div>
+    <div class="module-maxlength__module"><p>モジュール。</p>
+</div>
     <div class="module-maxlength__loop"><ul><li>element</li><li>element</li><li>element</li></ul></div>
 </div>
 <div class="resource-build">
