enabledChildren, enabledParent を追加

--- a/tests/testdata/modules1/dev/module_maxlength/template.html
+++ b/tests/testdata/modules1/dev/module_maxlength/template.html
@@ -1,4 +1,4 @@
 <div class="module-maxlength">
-    <div class="module-maxlength__module">{&{"module":{"name":"main_module","label":"最大2件","max-length": 2}}&}</div>
-    <div class="module-maxlength__loop"><ul>{&{"loop":{"name":"main_loop","label":"最大3件","max-length": 3}}&}<li>element</li>{&"endloop"&}</ul></div>
+    <div class="module-maxlength__module">{&{"module":{"name":"main_module","label":"最大2件","maxLength": 2}}&}</div>
+    <div class="module-maxlength__loop"><ul>{&{"loop":{"name":"main_loop","label":"最大3件","maxLength": 3}}&}<li>element</li>{&"endloop"&}</ul></div>
 </div>
