if フィールドが、 canvas モード描画時でも常に finalize モードで出力された値を評価するように変更した。

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -354,9 +354,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div data-broccoli-instance-path="/fields.main@21/fields.additionals@1" data-broccoli-mod-id="testMod1:dev/if" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
 
 
-<div class="if__base-text"><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></div>
 
 
+<div class="if__base-text">baseText は入力されていません。</div>
 
 
 </div>
