--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>sample page</title>
-        <link rel="stylesheet" href="/common/css/common.css" />
-        <link rel="stylesheet" href="/common/css/module.css" />
-        <script src="/common/js/module.js"></script>
+        <link rel="stylesheet" href="../common/css/common.css" />
+        <link rel="stylesheet" href="../common/css/module.css" />
+        <script src="../common/js/module.js"></script>
         <style media="screen">
             img{max-width:100%;}
         </style>
@@ -553,7 +553,7 @@ object(0) {
 
         </div><!-- /secondly -->
         <footer>
-            <a href="/editpage/">top</a>, <a href="http://www.pxt.jp/" target="_blank">pxt</a>
+            <a href="../editpage/">top</a>, <a href="http://www.pxt.jp/" target="_blank">pxt</a>
             <form action="javascript:alert('form submit done.');">
                 <input type="submit" value="submit!" />
             </form>
