(update test result)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -20,7 +20,7 @@
 		resource build.<br />
 	</p>
 </div>
-<h2 id="-">デフォルトの値</h2>
+<h2>デフォルトの値</h2>
 <p>ここを編集してください。</p>
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
@@ -32,7 +32,7 @@
 		<ul>
 
 		<li>loop3:
-			<div><h2 id="multitext-field-">multitext field.</h2>
+			<div><h2>multitext field.</h2>
 <p>multitext. -</p>
 </div>
 			<div><p>child.</p>
@@ -49,15 +49,16 @@
 <p>/loopフィールドの中にmoduleフィールド</p>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
+<h2>(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
-</code></pre><img src="./index_files/resources/otosan.jpg" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
+</code></pre>
+<img src="./index_files/resources/otosan.jpg" alt="" /><h2 data-dec="DEC入力テスト" id="minimum">最小構成のモジュールのサンプル</h2>
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
+<h2>(2) モジュールテンプレートの定義場所</h2>
 <p><code>px-files/px2dtconfig.json</code> に定義する。
 あああああ</p>
-<h2 id="markdown-">Markdownフィールド</h2>
+<h2>Markdownフィールド</h2>
 <ul>
 <li>list 1</li>
 <li>list 2</li>
@@ -66,13 +67,13 @@
 <p>再描画されました。</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<h2 id="-3-composer-">(3) Composer から呼び出す場合</h2>
+<h2>(3) Composer から呼び出す場合</h2>
 <ul>
 <li>require に、リポジトリを指定する。</li>
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
 <p>長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。</p>
-<h2 id="-">まるちテキストを追加してみました。</h2>
+<h2>まるちテキストを追加してみました。</h2>
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit thumb_list">
@@ -86,7 +87,7 @@
 </div><!-- /.thumb_list -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -126,7 +127,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>どぉぉぉ</p>
 </div>
-			<div></div>
+			<div>
+</div>
 		</li>
 
 		</ul>
@@ -136,10 +138,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<ul>
 
 		<li>loop3:
-			<div><h2 id="-">なかなかいいと思います。</h2>
+			<div><h2>なかなかいいと思います。</h2>
 <p>マークダウンコード。そのままHTMLに変換されます。</p>
 </div>
-			<div><h3 id="-">すばらしい！</h3>
+			<div><h3>すばらしい！</h3>
 <p>どですか？</p>
 </div>
 		</li>
@@ -147,7 +149,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>テスト3ああああ</p>
 </div>
-			<div></div>
+			<div>
+</div>
 		</li>
 
 		<li>loop3:
@@ -176,7 +179,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
-<h2 id="-">なかなかです。</h2>
+<h2>なかなかです。</h2>
 <p>まだ帰らなくてもいいでしょ。
 もっと遊びたいんだよ。</p>
 <p>いいじゃんかよーーーー！</p>
@@ -196,13 +199,13 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <!-- /.unit --></div>
-<h2 id="-">いい感じになってまいりました</h2>
+<h2>いい感じになってまいりました</h2>
 <p>あけましておめでとうございます。</p>
-<h2 id="-">できました</h2>
+<h2>できました</h2>
 <p><code>px.utils.iterate()</code> が、オブジェクトも処理できるようになりました。</p>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -219,18 +222,18 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
-<h3 id="-">コールバックチェーンがいまいち</h3>
+<h3>コールバックチェーンがいまいち</h3>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
-<h2 id="-">複雑になっちゃったなぁ</h2>
-<h3 id="-">なかなかさ、あれですな。</h3>
+<h2>複雑になっちゃったなぁ</h2>
+<h3>なかなかさ、あれですな。</h3>
 <p>集中して構えないと手を入れられない感じ。むぅ。</p>
 	</div></div>
 </div><!-- / .cols -->
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 <div class="dev-float-loop">
@@ -261,7 +264,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- /.thumb_list -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -277,15 +280,16 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 ## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="json-">JSON自体の差分を追えるようになりたい。</h2>
+<h2>JSON自体の差分を追えるようになりたい。</h2>
 <p>やっぱね、マークダウンが便利っす。</p>
 <p>大抵のことはこれで事足りる。</p>
 <p>ちゃんとマークアップできるし。コードもそこそこキレイにできる。</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>こうすると、なるらしい。</p>
-<pre><code>var jsonStr = JSON.stringify( {&quot;JSON&quot;:&quot;value&quot;}, null, 1 );
-</code></pre><ul>
+<pre><code>var jsonStr = JSON.stringify( {"JSON":"value"}, null, 1 );
+</code></pre>
+<ul>
 
 <li><p>増えたっていいじゃない？</p>
 </li>
@@ -314,14 +318,14 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: <h2 id="md">md</h2>
+	<li>loop1: <h2>md</h2>
 	<ul>
 
-		<li>loop2: <h2 id="md-layer-2">md layer 2</h2>
+		<li>loop2: <h2>md layer 2</h2>
 		<ul>
 
 		<li>loop3:
-			<div><h2 id="md-layer-3">md layer 3</h2>
+			<div><h2>md layer 3</h2>
 </div>
 			<div>multi text layer 3</div>
 		</li>
@@ -389,7 +393,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </div>
 <div class="twig_template">
-<h2></h2>
+<h2>
+</h2>
+
 
 
 <div class="twig_template-include">
@@ -402,7 +408,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="twig_template-loop">
 
-object(0) {
+array(0) {
 }
 
 
@@ -416,33 +422,33 @@ object(0) {
 		<span class="caret"></span>
 	</button>
 	<ul class="dropdown-menu" role="menu">
-		<!-- object(2) {
-  [0]=> 
-    object(1) {
-    [body]=> 
-    string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+		<!-- array(2) {
+  [0]=>
+  array(1) {
+    ["body"]=>
+    string(177) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
 "
   }
-  [1]=> 
-    object(1) {
-    [body]=> 
-    string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+  [1]=>
+  array(1) {
+    ["body"]=>
+    string(177) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
 "
   }
 }
  -->
-					<li role="presentation">object(1) {
-  [body]=> 
-  string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+					<li role="presentation">array(1) {
+  ["body"]=>
+  string(177) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
 "
 }
 </li>
-					<li role="presentation">object(1) {
-  [body]=> 
-  string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+					<li role="presentation">array(1) {
+  ["body"]=>
+  string(177) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
 "
 }
@@ -464,7 +470,7 @@ object(0) {
 <li>1行マークダウンです</li>
 </ul>
 </div>
-<div><h2 id="multitext">MultiText</h2>
+<div><h2>MultiText</h2>
 <p><strong>マルチテキスト</strong>です。</p>
 <ul>
 <li>list 1</li>
@@ -535,7 +541,7 @@ object(0) {
 <!-- /.unit --></div>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
-<h2 id="-">ふたつめのコンテンツエリア</h2>
+<h2>ふたつめのコンテンツエリア</h2>
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
 <p>いい感じになってきたと思います。</p>
