--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -2,22 +2,23 @@
 <!-- /.unit --></div>
 <div class="cols unit" data-dec="あああああああ">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="markdown-">Markdownフィールド</h2>
+<h2>Markdownフィールド</h2>
 <ul>
 <li>list 1</li>
 <li>list 2</li>
 </ul>
-<h2 id="-">最小構成のモジュールのサンプル</h2>
-<h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
+<h2>最小構成のモジュールのサンプル</h2>
+<h2>(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
-</code></pre>	</div></div>
+</code></pre>
+	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
+<h2>(2) モジュールテンプレートの定義場所</h2>
 <p><code>px-files/px2dtconfig.json</code> に定義する。
 あああああ</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<h2 id="-3-composer-">(3) Composer から呼び出す場合</h2>
+<h2>(3) Composer から呼び出す場合</h2>
 <ul>
 <li>require に、リポジトリを指定する。</li>
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
@@ -43,7 +44,7 @@
 </div><!-- /.thumb_list -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -117,14 +118,15 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: 	<ul>
+	<li>loop1: 
+	<ul>
 
 	</ul>
 	</li>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
-<h2 id="-">なかなかです。</h2>
+<h2>なかなかです。</h2>
 <p>まだ帰らなくてもいいでしょ。
 もっと遊びたいんだよ。</p>
 <p>いいじゃんかよーーーー！</p>
@@ -144,13 +146,13 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <!-- /.unit --></div>
-<h2 id="-">いい感じになってまいりました</h2>
+<h2>いい感じになってまいりました</h2>
 <p>あけましておめでとうございます。</p>
-<h2 id="-">できました</h2>
+<h2>できました</h2>
 <p><code>px.utils.iterate()</code> が、オブジェクトも処理できるようになりました。</p>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -164,23 +166,23 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
-<h3 id="-">コールバックチェーンがいまいち</h3>
+<h3>コールバックチェーンがいまいち</h3>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
-<h2 id="-">複雑になっちゃったなぁ</h2>
-<h3 id="-">なかなかさ、あれですな。</h3>
+<h2>複雑になっちゃったなぁ</h2>
+<h3>なかなかさ、あれですな。</h3>
 <p>集中して構えないと手を入れられない感じ。むぅ。</p>
 	</div></div>
 </div><!-- / .cols -->
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">長いページを作るテスト</h2>
+<h2>長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 	</div></div>
@@ -196,15 +198,16 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 ## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="json-">JSON自体の差分を追えるようになりたい。</h2>
+<h2>JSON自体の差分を追えるようになりたい。</h2>
 <p>やっぱね、マークダウンが便利っす。</p>
 <p>大抵のことはこれで事足りる。</p>
 <p>ちゃんとマークアップできるし。コードもそこそこキレイにできる。</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>こうすると、なるらしい。</p>
-<pre><code>var jsonStr = JSON.stringify( {&quot;JSON&quot;:&quot;value&quot;}, null, 1 );
-</code></pre><ul>
+<pre><code>var jsonStr = JSON.stringify( {"JSON":"value"}, null, 1 );
+</code></pre>
+<ul>
 
 <li><p>増えたっていいじゃない？</p>
 </li>
@@ -221,20 +224,20 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">ね。遊んでくればいいじゃんか</h3>
+<h3>ね。遊んでくればいいじゃんか</h3>
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">どうなってんだー</h3>
+<h3>どうなってんだー</h3>
 <p>なかなか再現しないなぁ。</p>
 <p>高さが増えるイベントが起きた直後に、スクロールバーの分座標がずれるっぽい。</p>
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<h3 id="-">処理の順番間違ってるかな？</h3>
+<h3>処理の順番間違ってるかな？</h3>
 <p>復旧したっ。</p>
 	</div></div>
 </div><!-- / .cols -->
 <div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
-<h2 id="-">あれ。</h2>
+<h2>あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
@@ -245,14 +248,14 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: <h2 id="md">md</h2>
+	<li>loop1: <h2>md</h2>
 	<ul>
 
-		<li>loop2: <h2 id="md-layer-2">md layer 2</h2>
+		<li>loop2: <h2>md layer 2</h2>
 		<ul>
 
 		<li>loop3:
-			<div><h2 id="md-layer-3">md layer 3</h2>
+			<div><h2>md layer 3</h2>
 </div>
 			<div>multi text layer 3</div>
 		</li>
