bugfix: A non-numeric value encountered

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -406,14 +406,14 @@ array(0) {
   [0]=>
   array(1) {
     ["body"]=>
-    string(891) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+    string(892) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
 <div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
   }
   [1]=>
   array(1) {
     ["body"]=>
-    string(891) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+    string(892) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
 <div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
   }
@@ -421,14 +421,14 @@ array(0) {
  -->
 					<li role="presentation">array(1) {
   ["body"]=>
-  string(891) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+  string(892) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
 <div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
 }
 </li>
 					<li role="presentation">array(1) {
   ["body"]=>
-  string(891) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+  string(892) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
 <div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
 }
