(loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するモジュールを追加)

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,10 @@
+<p>
+    このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
+</p>
+Echo Sample String<br />
+
+    <p></p>
+
 <div class="resource-build">
 	<p>
 		resource build.<br />
