--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,6 +15,16 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="loop-and-echo">
+<p>
+    このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
+</p>
+<p class="loop-and-echo__input-value">Echo Sample String</p>
+
+
+    <p class="loop-and-echo__echo-value"></p>
+
+</div>
 <div class="resource-build">
 	<p>
 		resource build.<br />
