#54 loopフィールドの外側に宣言されたinputフィールドの値を、 loopフィールド内の echoフィールドで参照できるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -22,7 +22,7 @@
 <p class="loop-and-echo__input-value">Echo Sample String</p>
 
 
-    <p class="loop-and-echo__echo-value"></p>
+    <p class="loop-and-echo__echo-value">Echo Sample String</p>
 
 </div>
 <div class="resource-build">
