--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -1,11 +1,14 @@
-<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/root"><div data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loopフィールドの外にある値を、内にある echoフィールドから参照するテスト"><p>
+<div data-broccoli-instance-path="" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/root"><div class="loop-and-echo" data-broccoli-instance-path="/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loopフィールドの外にある値を、内にある echoフィールドから参照するテスト">
+<p>
     このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
 </p>
-Echo Sample String<br />
+<p class="loop-and-echo__input-value">Echo Sample String</p>
 
-    <p data-broccoli-instance-path="/fields.main@0/fields.hoge_loop@0" data-broccoli-sub-mod-name="hoge_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの外にある値を、内にある echoフィールドから参照するテスト -"></p>
+
+    <p class="loop-and-echo__echo-value" data-broccoli-instance-path="/fields.main@0/fields.hoge_loop@0" data-broccoli-sub-mod-name="hoge_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの外にある値を、内にある echoフィールドから参照するテスト -">Echo Sample String</p>
 <div data-broccoli-instance-path="/fields.main@0/fields.hoge_loop@1" data-broccoli-mod-id="testMod1:dev/loop_and_echo" data-broccoli-sub-mod-name="hoge_loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
-</div><div class="resource-build" data-broccoli-instance-path="/fields.main@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/resource_build">
+</div>
+<div class="resource-build" data-broccoli-instance-path="/fields.main@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/resource_build">
 	<p>
 		resource build.<br />
 	</p>
