--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,10 +1,13 @@
+<div class="loop-and-echo">
 <p>
     このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
 </p>
-Echo Sample String<br />
+<p class="loop-and-echo__input-value">Echo Sample String</p>
 
-    <p></p>
 
+    <p class="loop-and-echo__echo-value">Echo Sample String</p>
+
+</div>
 <div class="resource-build">
 	<p>
 		resource build.<br />
