scriptフィールド貫通

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -47,6 +47,11 @@
 
 </ul>
 <p>/loopフィールドの中にmoduleフィールド</p>
+document.write("ここはJavaScriptでdocument.writeした文字列です。");
+
+<?php
+echo "<p>ここはPHPコードが出力した文字列です。</p>";
+?>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(1) モジュールIDの表現形式</h2>
