--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,8 @@
+document.write("ここはJavaScriptでdocument.writeした文字列です。");
+
+<?php
+echo "<p>ここはPHPコードが出力した文字列です。</p>";
+?>
 <div class="resource-build">
 	<p>
 		resource build.<br />
