scriptフィールドにlang属性を追加

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,8 +1,3 @@
-document.write("ここはJavaScriptでdocument.writeした文字列です。");
-
-<?php
-echo "<p>ここはPHPコードが出力した文字列です。</p>";
-?>
 <div class="resource-build">
 	<p>
 		resource build.<br />
@@ -35,6 +30,15 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 
 </ul>
 <p>/loopフィールドの中にmoduleフィールド</p>
+document.write("ここはJavaScriptでdocument.writeした文字列です。");
+
+/* css sample */
+
+<?php
+echo "<p>ここはPHPコードが出力した文字列です。</p>";
+?>
+
+// Language Selectable
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(1) モジュールIDの表現形式</h2>
