--- a/tests/testdata/modules1/dev/script/template.html
+++ b/tests/testdata/modules1/dev/script/template.html
@@ -1,3 +1,7 @@
-{&{"input":{"type":"script","name":"sample_javascript","label":"JavaScript Sample"}}&}
+{&{"input":{"type":"script","name":"sample_javascript","label":"JavaScript Sample","lang":"javascript"}}&}
 
-{&{"input":{"type":"script","name":"sample_php","label":"PHP Sample"}}&}
+{&{"input":{"type":"script","name":"sample_css","label":"CSS Sample","lang":"css"}}&}
+
+{&{"input":{"type":"script","name":"sample_php","label":"PHP Sample","lang":"php"}}&}
+
+{&{"input":{"type":"script","name":"sample_selectable","label":"Selectable Sample"}}&}
