scriptフィールドにautowrap属性を追加

--- a/tests/testdata/modules1/dev/script/template.html
+++ b/tests/testdata/modules1/dev/script/template.html
@@ -4,4 +4,4 @@
 
 {&{"input":{"type":"script","name":"sample_php","label":"PHP Sample","lang":"php"}}&}
 
-{&{"input":{"type":"script","name":"sample_selectable","label":"Selectable Sample"}}&}
+{&{"input":{"type":"script","name":"sample_selectable","label":"Selectable Sample","autowrap":true}}&}
