loopフィールドに index属性を追加

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -18,14 +18,11 @@
 </div><div data-broccoli-instance-path="/fields.main@3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loopフィールドの中にmoduleフィールド"><p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
-	<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0" data-broccoli-sub-mod-name="sample_loop1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop1
-	<ul>
+	<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0" data-broccoli-sub-mod-name="sample_loop1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop1-1	<ul>
 
-		<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0/fields.sample_loop2@0" data-broccoli-sub-mod-name="sample_loop2" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop2
-		<ul>
+		<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0/fields.sample_loop2@0" data-broccoli-sub-mod-name="sample_loop2" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop2-1		<ul>
 
-		<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop3:
-			<div><h2>multitext field.</h2>
+		<li data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- loopフィールドの中にmoduleフィールド -">loop3-1			<div><h2>multitext field.</h2>
 <p>multitext. -</p>
 </div>
 			<div><p data-broccoli-instance-path="/fields.main@3/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0/fields.main@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">child.</p>
