--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -18,14 +18,11 @@
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
-	<li>loop1
-	<ul>
+	<li>loop1-1	<ul>
 
-		<li>loop2
-		<ul>
+		<li>loop2-1		<ul>
 
-		<li>loop3:
-			<div><h2>multitext field.</h2>
+		<li>loop3-1			<div><h2>multitext field.</h2>
 <p>multitext. -</p>
 </div>
 			<div><p>child.</p>
