--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -15,6 +15,12 @@
 </div>
 <h2>デフォルトの値</h2>
 <p>ここを編集してください。</p>
+<p><?= $test1 ?></p>
+<p><?= $test2 ?></p>
+<p><?= $test3 ?></p>
+<?php
+echo "<p>これは、PHPスクリプトによる出力です。</p>";
+?>
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
