`display:none` が適用されている要素が画面を覆ってしまうことがある問題を修正。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -25,7 +25,9 @@
     <p class="loop-and-echo__echo-value">Echo Sample String</p>
 
 </div>
-<div class="resource-build">
+<div class="display-none">
+    <p>display:none; するテスト</p>
+</div><div class="resource-build">
 	<p>
 		resource build.<br />
 	</p>
