imageフィールドで、画像を選択していない場合に、画像ではないパスが出力される問題を修正し、空白文字列となるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -552,6 +552,9 @@ array(0) {
 </div>
 	</div></div>
 </div><!-- / .cols -->
+<p><img src="" /></p>
+<p>画像はセットされていません。</p>
+
 
         </div><!-- /main -->
         <h2>secondly</h2>
