--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -28,17 +28,17 @@
 <div class="unit thumb_list">
 	<ul>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./test1_files/resources/ea3610c827341dafa4820ac9b168659c.unknown" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/894782fbca0d5d4b22f743abdbecd726.unknown" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles2.pxt.jp/"><img src="./test1_files/resources/184be8b5850e003055fc894867b60249.unknown" alt="welcome" /><span class="thumb_list-caption">welcome</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://pickles2.pxt.jp/"><img src="" alt="welcome" /><span class="thumb_list-caption">welcome</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/908cc3105697fb45f523a3a67e3e5cd8.unknown" alt="SVG画像" /><span class="thumb_list-caption">これはSVG画像です</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="" alt="SVG画像" /><span class="thumb_list-caption">これはSVG画像です</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/3ddb0727881f406050549e651730401a.unknown" alt="代替テキストなんですよ。" /><span class="thumb_list-caption">キャプション、なんですよ</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="" alt="代替テキストなんですよ。" /><span class="thumb_list-caption">キャプション、なんですよ</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="/"><img src="./test1_files/resources/a6f17df4e428b4c65328185f9c9c8e40.unknown" alt="logo svg" /><span class="thumb_list-caption">SVGファイルです</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="/"><img src="" alt="logo svg" /><span class="thumb_list-caption">SVGファイルです</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
