`default` が設定されている `loop` フィールド内のフィールドの変更内容が同期してしまうことがある不具合を修正

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -538,3 +538,12 @@ array(0) {
 <p><img src="" /></p>
 <p>画像はセットされていません。</p>
 
+<ul>
+
+	<li>List Item 1</li>
+
+	<li>List Item 2</li>
+
+	<li>List Item 3</li>
+
+</ul>
