--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -555,6 +555,15 @@ array(0) {
 <p><img src="" /></p>
 <p>画像はセットされていません。</p>
 
+<ul>
+
+	<li>List Item 1</li>
+
+	<li>List Item 2</li>
+
+	<li>List Item 3</li>
+
+</ul>
 
         </div><!-- /main -->
         <h2>secondly</h2>
