1つのモジュール内で画像リソースを繰り返し呼び出す場合に、2回目以降の画像がプレビューされない不具合を修正。

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,7 @@
+<p><img src="" /></p>
+<p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
+<p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
+<p>3: <img src="./index_files/resources/clip_m.png" alt="image 3" /></p>
 <div class="loop-and-echo">
 <p>
     このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
