--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,6 +15,10 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<p><img src="" /></p>
+<p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
+<p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
+<p>3: <img src="./index_files/resources/clip_m.png" alt="image 3" /></p>
 <div class="loop-and-echo">
 <p>
     このモジュールは、 loopフィールドの外側にあるinputフィールドの値を、 loopフィールド内のechoフィールドで参照するテストです。<br />
