`script` フィールドに `escape` オプションを追加。

--- a/tests/testdata/modules1/dev/script/template.html
+++ b/tests/testdata/modules1/dev/script/template.html
@@ -5,3 +5,5 @@
 {&{"input":{"type":"script","name":"sample_php","label":"PHP Sample","lang":"php"}}&}
 
 {&{"input":{"type":"script","name":"sample_selectable","label":"Selectable Sample","autowrap":true}}&}
+
+<button onclick="{&{"input":{"type":"script","name":"sample_javascript_as_html_attr","label":"JavaScript HTML Attr Sample","lang":"javascript", "escape":"html_attr_text"}}&}">test</button>
