--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,6 +15,8 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="parse-error-sample">
+</div>
 <p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
 <p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
@@ -75,6 +77,9 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 ?>
 
 // Language Selectable
+
+<button onclick="alert(&quot;ここはJavaScriptでalertした文字列です。&quot;);
+">test</button>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(1) モジュールIDの表現形式</h2>
