モジュールのパースエラーをブラウザ側のコンソールで確認できるようになった。

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,5 @@
+<div class="parse-error-sample">
+</div>
 <p><img src="" /></p>
 <p>1: <img src="./index_files/resources/clip_m.png" alt="image 1" /></p>
 <p>2: <img src="./index_files/resources/clip_m.png" alt="image 2" /></p>
@@ -58,6 +60,9 @@ echo "<p>ここはPHPコードが出力した文字列です。</p>";
 ?>
 
 // Language Selectable
+
+<button onclick="alert(&quot;ここはJavaScriptでalertした文字列です。&quot;);
+">test</button>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>(1) モジュールIDの表現形式</h2>
