Twigのloop要素をドラッグ・アンド・ドロップするための準備

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -412,6 +412,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 
 <div class="twig_template-loop">
+<div>
 <div data-broccoli-instance-path="/fields.main@27/fields.loop@0" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
 
 
