`loopitem_start`, `loopitem_end` 策定中

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -424,11 +424,22 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="twig_template-loop">
 
+<div>
+<p>えええ</p>
+
+<p><p>ううう</p>
+</p>
+</div>
 
 
+<div>
+<p>いいい</p>
 
-array(0) {
-}
+<p><p>あああ</p>
+</p>
+</div>
+
+
 
 
 </div>
