--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -412,12 +412,23 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 
 <div class="twig_template-loop">
-<div>
-<div data-broccoli-instance-path="/fields.main@27/fields.loop@0" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
+
+<div data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+<p>えええ</p>
+
+<p><p>ううう</p>
+</p>
+</div>
 
 
-array(0) {
-}
+<div data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="twig モジュール">
+<p>いいい</p>
+
+<p><p>あああ</p>
+</p>
+</div>
+
+<div data-broccoli-instance-path="/fields.main@27/fields.loop@2" data-broccoli-mod-id="testMod1:dev/twig" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &quot;YuGothic&quot;, &quot;Yu Gothic&quot;, Meiryo, &quot;Hiragino Kaku Gothic ProN&quot;, Verdana, sans-serif;font-size:9px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
 
 
 </div>
